Learning flexbox - lots of issues.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
 </head>
 <body>
     <div class="herosection">
-        <div class="headerlinks">
-        <ul>
-            <li><a href="#">Header link one</a></li>
-            <li><a href="#">Header link two</a></li>
-            <li><a href="#">Header link three</a></li>
-        </ul>       
+        <div class="header">
+            <div class="logo">
+                Header Logo
+            </div>
+            <div class="navlinks">
+            <ul>
+                <li><a href="#">Header link one</a></li>
+                <li><a href="#">Header link two</a></li>
+                <li><a href="#">Header link three</a></li>
+            </ul>       
+            </div>
         </div>
-    <div class="herocontent">
+        <div class="blah">
+        <div class="herocontent">
         <h1>This website is awesome</h2>
+        </div>
+        <div class="heythere"> Hey there!</div>
     </div>
-    </div>
+
+</div>
     <div class="content">
         <h2> Some random information</h2>
         <button> this is a button </button>
