added html and css

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             </ul>       
             </div>
         </div>
-        <div class="blah">
         <div class="herocontent">
-        <h1>This website is awesome</h2>
+            <h1 class="heroheader">This website is awesome</h2>
+            <p class="herotext">This website has some subtext</p>
+            <button class="herobutton">Sign up</button>
+
         </div>
-        <div class="heythere"> Hey there!</div>
-    </div>
 
 </div>
     <div class="content">
