--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="content">
         <h2> Some random information</h2>
         <button> this is a button </button>
-        <button> this is a button </button>
+        <button> this is another button </button>
         <button> this is a button </button>
         <button> this is a button </button>
     <div class="quote">
