--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
             </div>
         </div>
         <div class="herocontent">
-            <h1 class="heroheader">This website is awesome</h2>
-            <p class="herotext">This website has some subtext</p>
-            <button class="herobutton">Sign up</button>
-
+            <div class="herocontentleft">
+                <h2 class="heroheader">This website is awesome</h2>
+                <p class="herotext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button class="herobutton">Sign up</button>
+            </div>
+            <div class="heroimage">
+                <h2>This is a placeholder for an image</h2>
+            </div>    
         </div>
-
 </div>
     <div class="content">
         <h2> Some random information</h2>
@@ -37,6 +40,7 @@
     <div class="quote">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
     </div>
+    
     <div class="cta">
     </div>
     <div class="footer">
