--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="herosection">
-        <div class="header">
-            <div class="logo">
+    <div class="hero">
+        <div class="hero__header">
+            <div class="hero__logo">
                 Header Logo
             </div>
-            <div class="navlinks">
+            <div class="hero__navlinks">
             <ul>
                 <li><a href="#">Header link one</a></li>
                 <li><a href="#">Header link two</a></li>
@@ -20,7 +20,7 @@
             </ul>       
             </div>
         </div>
-        <div class="herocontent">
+        <div class="hero__content">
             <div class="herocontentleft">
                 <h2 class="heroheader">This website is awesome</h2>
                 <p class="herotext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
@@ -30,18 +30,28 @@
                 <h2>This is a placeholder for an image</h2>
             </div>    
         </div>
-</div>
-    <div class="content">
-        <h2> Some random information</h2>
-        <button> this is a button </button>
-        <button> this is another button </button>
-        <button> this is a button </button>
-        <button> this is a button </button>
+    </div>
+    <div class="information">
+        <div class="information__title">
+            <h2> Some random information</h2>
+        </div>
+        <div class="information__buttons">
+            <button> this is a button </button>
+            <button> this is another button </button>
+            <button> this is a button </button>
+            <button> this is a button </button>
+        </div>
+    </div>
+
     <div class="quote">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
+        <p>-Thor, God of Thunder</p>
     </div>
-    
+
     <div class="cta">
+        <h2>Call to action! It's time!</h2>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button>Sign up</button>
     </div>
     <div class="footer">
         <p>Copyright the Odin Project</p>
