--- a/index.html
+++ b/index.html
@@ -4,38 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="hero">
-        <div class="hero__header">
-            <div class="hero__logo">
-                Header Logo
+
+    <div class="nav-container">
+        <div class="nav">
+            <div class="nav nav__logo">
+                    Nav Logo
             </div>
-            <div class="hero__navlinks">
-            <ul>
-                <li><a href="#">Header link one</a></li>
-                <li><a href="#">Header link two</a></li>
-                <li><a href="#">Header link three</a></li>
-            </ul>       
+            <div class="nav nav__links">
+                <ul>
+                    <li><a href="#">Header link one</a></li>
+                    <li><a href="#">Header link two</a></li>
+                    <li><a href="#">Header link three</a></li>
+                </ul>       
             </div>
-        </div>
-        <div class="hero__content">
-            <div class="herocontentleft">
-                <h2 class="heroheader">This website is awesome</h2>
-                <p class="herotext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button class="herobutton">Sign up</button>
-            </div>
-            <div class="heroimage">
-                <h2>This is a placeholder for an image</h2>
-            </div>    
         </div>
     </div>
+    
+    <div class="overview">
+        <h2 class="overview overview__title">This website is awesome</h2>
+        <p class="overview overview__text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button class="overview overview__button">Sign up</button>
+        </div>
+        <div class="overview overview__image">
+        <h2>This is a placeholder for an image</h2>
+        </div>    
+    </div>
+    
     <div class="information">
-        <div class="information__title">
+        <div class="information information__title">
             <h2> Some random information</h2>
         </div>
-        <div class="information__buttons">
+        <div class="information information__buttons">
             <button> this is a button </button>
             <button> this is another button </button>
             <button> this is a button </button>
@@ -44,8 +49,12 @@
     </div>
 
     <div class="quote">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
-        <p>-Thor, God of Thunder</p>
+        <div class="quote quote__text">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
+        </div>
+        <div class="quote quote__author">
+                <p>-Thor, God of Thunder</p>
+        </div>
     </div>
 
     <div class="cta">
