Changed directory structure to allow edit in scss
Installed node, added gitignore.

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,13 @@
 </head>
 <body>
 
-    <div class="nav-container">
+    <!--Beginning of Hero Section-->
+    <div class="nav-wrapper">
         <div class="nav">
-            <div class="nav nav__logo">
-                    Nav Logo
+            <div class="nav__logo">
+                Nav Logo
             </div>
-            <div class="nav nav__links">
+            <div class="nav__links">
                 <ul>
                     <li><a href="#">Header link one</a></li>
                     <li><a href="#">Header link two</a></li>
@@ -25,43 +26,51 @@
             </div>
         </div>
     </div>
-    
-    <div class="overview">
-        <h2 class="overview overview__title">This website is awesome</h2>
-        <p class="overview overview__text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button class="overview overview__button">Sign up</button>
+    <div class="overview-wrapper">
+        <div class="overview-container1">
+            <h2 class="overview-container1__title">This website is awesome</h2>
+            <p class="overview-container1__text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button class="overview__button">Sign up</button>
         </div>
-        <div class="overview overview__image">
-        <h2>This is a placeholder for an image</h2>
-        </div>    
+        <div class="overview-container2">
+            <h2 class="overview-container2__image">This is a placeholder for an image</h2>    
+        </div>
     </div>
-    
-    <div class="information">
-        <div class="information information__title">
+    <!--End of Hero Section-->
+
+    <!--Beginning of Information Section-->
+    <div class="information-wrapper">
+        <div class="information__title">
             <h2> Some random information</h2>
         </div>
-        <div class="information information__buttons">
+        <div class="information__buttons">
             <button> this is a button </button>
             <button> this is another button </button>
             <button> this is a button </button>
             <button> this is a button </button>
         </div>
     </div>
+    <!--End of Information Section-->
 
-    <div class="quote">
-        <div class="quote quote__text">
+    <!--Beginning of Quote Section-->
+    <div class="quote-wrapper">
+        <div class="quote__text">
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
         </div>
-        <div class="quote quote__author">
+        <div class="quote__author">
                 <p>-Thor, God of Thunder</p>
         </div>
     </div>
+    <!--End of Quote Section-->
 
-    <div class="cta">
+    <!--Beginning of Call to Action Section-->
+    <div class="cta-wrapper">
         <h2>Call to action! It's time!</h2>
         <p>Sign up for our product by clicking that button right over there!</p>
         <button>Sign up</button>
     </div>
+    <!--End of Call to Action Section-->
+
     <div class="footer">
         <p>Copyright the Odin Project</p>
     </div>
