Completed information section

--- a/src/index.html
+++ b/src/index.html
@@ -40,16 +40,29 @@
 
     <!--Beginning of Information Section-->
     <div class="container container--information">
-        <div class="information__title">
+        <div class="information-title">
             <h2> Some random information</h2>
         </div>
-        <div class="information__card">
-            <button> this is a button </button>
-            <button> this is another button </button>
-            <button> this is a button </button>
-            <button> this is a button </button>
+    </div>
+    <div class="container container--information-card">
+        <div class="information-card">
+            <div class="information-card__box"></div>
+            <div class="information-card__para">This is some subtext under an illustration or image</div>
+        </div>
+        <div class="information-card">
+            <div class="information-card__box"></div>
+            <div class="information-card__para">This is some subtext under an illustration or image</div>
+        </div>
+        <div class="information-card">
+            <div class="information-card__box"></div>
+            <div class="information-card__para">This is some subtext under an illustration or image</div>     
+        </div>
+        <div class="information-card">
+            <div class="information-card__box"></div>
+            <div class="information-card__para">This is some subtext under an illustration or image</div>
         </div>
     </div>
+
     <!--End of Information Section-->
 
     <!--Beginning of Quote Section-->
