Completed except for footer

--- a/src/index.html
+++ b/src/index.html
@@ -66,13 +66,13 @@
     <!--End of Information Section-->
 
     <!--Beginning of Quote Section-->
-    <div class="container container--quote"></div>
+    <div class="container container--quote">
         <div class="quote-text">
             <div class="quote-text__para">
                 <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
             </div>
-            <div class="quote__author">
-                    <p>-Thor, God of Thunder</p>
+            <div class="quote-text__author">
+                <p>-Thor, God of Thunder</p>
             </div>
         </div>
     </div>
@@ -80,12 +80,14 @@
 
     <!--Beginning of Call to Action Section-->
     <div class="container container--cta">
-        <div class="cta-text">
-            <h2 class="cta-text__title">Call to action! It's time!</h2>
-            <p class="cta-text__para">Sign up for our product by clicking that button right over there!</p>
-        </div>
-        <div class="cta-button__signup">
-            <button>Sign up</button>
+        <div class="container--cta-inner-box">
+            <div class="cta-text">
+                <h2 class="cta-text__title">Call to action! It's time!</h2>
+                <p class="cta-text__para">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="cta-button">
+                <button class="cta-button__signup">Sign up</button>
+            </div>
         </div>
     </div>
     <!--End of Call to Action Section-->
