--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
     <!--End of Call to Action Section-->
 
     <div class="footer">
-        <p>Copyright the Odin Project</p>
+        <p>Copyright &copy the Odin Project 2024</p>
     </div>
 </div>
 </body>
